@@ -189,38 +189,36 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,147,106,50,14
 END
 
-IDD_TABLEMAP DIALOGEX 0, 0, 343, 364
+IDD_TABLEMAP DIALOGEX 0, 0, 407, 449
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_THICKFRAME
 CAPTION "TableMap"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_TABLEMAP_TREE,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,7,25,94,281
+    CONTROL         "",IDC_TABLEMAP_TREE,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_SHOWSELALWAYS | WS_BORDER | WS_HSCROLL | WS_TABSTOP,7,25,92,256
     PUSHBUTTON      "New",IDC_NEW,7,7,26,14
     PUSHBUTTON      "Delete",IDC_DELETE,39,7,30,14
-    PUSHBUTTON      "Edit",IDC_EDIT,75,7,26,14
-    EDITTEXT        IDC_LEFT,108,30,26,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_LEFT_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,133,30,10,14
-    EDITTEXT        IDC_TOP,147,23,26,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_TOP_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,171,23,10,14
-    EDITTEXT        IDC_BOTTOM,147,39,26,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_BOTTOM_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,171,39,10,14
-    EDITTEXT        IDC_RIGHT,185,30,26,14,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "",IDC_RIGHT_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,209,30,10,14
-    PUSHBUTTON      "Button1",IDC_DRAWRECT,206,13,15,14,BS_BITMAP
-    PUSHBUTTON      "Tall",IDC_NUDGE_TALLER,242,15,13,12
-    PUSHBUTTON      "Shrt",IDC_NUDGE_SHORTER,260,15,13,12
-    PUSHBUTTON      "Wid",IDC_NUDGE_WIDER,242,29,13,12
-    PUSHBUTTON      "Nrw",IDC_NUDGE_NARROWER,260,29,13,12
-    PUSHBUTTON      "Big",IDC_NUDGE_BIGGER,242,43,13,12
-    PUSHBUTTON      "Sml",IDC_NUDGE_SMALLER,260,43,13,12
-    PUSHBUTTON      "UL",IDC_NUDGE_UPLEFT,286,16,13,12
-    PUSHBUTTON      "U",IDC_NUDGE_UP,300,16,13,12
-    PUSHBUTTON      "UR",IDC_NUDGE_UPRIGHT,314,16,13,12
-    PUSHBUTTON      "L",IDC_NUDGE_LEFT,286,28,13,12
-    PUSHBUTTON      "R",IDC_NUDGE_RIGHT,314,28,13,12
-    PUSHBUTTON      "DL",IDC_NUDGE_DOWNLEFT,286,41,13,12
-    PUSHBUTTON      "D",IDC_NUDGE_DOWN,300,41,13,12
-    PUSHBUTTON      "DR",IDC_NUDGE_DOWNRIGHT,314,41,13,12
+    PUSHBUTTON      "Edit",IDC_EDIT,74,7,26,14
+    EDITTEXT        IDC_LEFT,121,30,26,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_LEFT_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,147,30,11,14
+    EDITTEXT        IDC_TOP,161,22,26,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_TOP_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,185,22,11,14
+    EDITTEXT        IDC_BOTTOM,161,38,26,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_BOTTOM_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,185,38,11,14
+    PUSHBUTTON      "Button1",IDC_DRAWRECT,299,30,15,14,BS_BITMAP
+    PUSHBUTTON      "Tall",IDC_NUDGE_TALLER,241,18,13,12,BS_CENTER
+    PUSHBUTTON      "Shrt",IDC_NUDGE_SHORTER,259,18,13,12,BS_CENTER
+    PUSHBUTTON      "Wid",IDC_NUDGE_WIDER,241,32,13,12,BS_CENTER
+    PUSHBUTTON      "Nrw",IDC_NUDGE_NARROWER,259,32,13,12,BS_CENTER
+    PUSHBUTTON      "Big",IDC_NUDGE_BIGGER,241,46,13,12,BS_CENTER
+    PUSHBUTTON      "Sml",IDC_NUDGE_SMALLER,259,46,13,12,BS_CENTER
+    PUSHBUTTON      "UL",IDC_NUDGE_UPLEFT,285,19,13,12,BS_CENTER
+    PUSHBUTTON      "U",IDC_NUDGE_UP,299,19,13,12,BS_CENTER
+    PUSHBUTTON      "UR",IDC_NUDGE_UPRIGHT,313,19,13,12,BS_CENTER
+    PUSHBUTTON      "L",IDC_NUDGE_LEFT,285,31,13,12,BS_CENTER
+    PUSHBUTTON      "R",IDC_NUDGE_RIGHT,313,31,13,12,BS_CENTER
+    PUSHBUTTON      "DL",IDC_NUDGE_DOWNLEFT,285,44,13,12,BS_CENTER
+    PUSHBUTTON      "D",IDC_NUDGE_DOWN,299,44,13,12,BS_CENTER
+    PUSHBUTTON      "DR",IDC_NUDGE_DOWNRIGHT,313,44,13,12,BS_CENTER
     COMBOBOX        IDC_TRANSFORM,162,73,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_RADIUS,162,89,38,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_RADIUS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,199,89,11,14
@@ -234,33 +232,40 @@ BEGIN
     PUSHBUTTON      "Create Image",IDC_CREATE_IMAGE,255,127,54,14
     PUSHBUTTON      "+",IDC_FONTPLUS,320,189,11,11
     PUSHBUTTON      "-",IDC_FONTMINUS,320,204,11,11
-    COMBOBOX        IDC_ZOOM,52,307,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_PIXELSEPARATION,109,155,208,91,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
-    CONTROL         "",IDC_CURRENTREGION,"Static",SS_BLACKFRAME | SS_REALSIZEIMAGE,107,255,229,102
+    COMBOBOX        IDC_ZOOM,51,287,48,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_PIXELSEPARATION,134,155,183,88,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | WS_HSCROLL
+    CONTROL         "",IDC_CURRENTREGION,"Static",SS_BLACKFRAME | SS_REALSIZEIMAGE,115,263,269,100
     LTEXT           "Transform",IDC_STATIC,123,75,34,8
     LTEXT           "A",IDC_STATIC,252,65,8,8
     LTEXT           "Radius",IDC_STATIC,135,92,22,8
     LTEXT           "Result",IDC_STATIC,163,111,21,8
     EDITTEXT        IDC_RESULT,189,107,90,14,ES_AUTOHSCROLL | ES_READONLY
-    GROUPBOX        "Pixel Separation",IDC_STATIC,106,144,230,107
-    GROUPBOX        "Rectangle",IDC_STATIC,105,4,118,56,0,WS_EX_TRANSPARENT
+    GROUPBOX        "Pixel Separation",IDC_STATIC,115,144,269,105
+    GROUPBOX        "Rectangle",IDC_STATIC,115,7,120,56,0,WS_EX_TRANSPARENT
     LTEXT           "R",IDC_STATIC,268,65,8,8
     LTEXT           "G",IDC_STATIC,283,65,8,8
     LTEXT           "B",IDC_STATIC,299,65,8,8
     LTEXT           "Color",IDC_STATIC,224,75,18,8
-    LTEXT           "Zoom level:",IDC_STATIC,7,309,38,8
+    LTEXT           "Zoom level:",IDC_STATIC,7,287,38,8
     EDITTEXT        IDC_RED_AVG,262,90,15,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_GREEN_AVG,278,90,15,14,ES_AUTOHSCROLL | ES_READONLY
     EDITTEXT        IDC_BLUE_AVG,294,90,15,14,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "Avg Color",IDC_STATIC,225,93,32,8
-    GROUPBOX        "Nudge",IDC_STATIC,231,4,105,56,0,WS_EX_TRANSPARENT
-    COMBOBOX        IDC_TRACKER_FONT_SET,41,326,23,56,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_TRACKER_CARD_NUM,76,340,23,53,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Tracker",IDC_STATIC,6,319,95,38
-    LTEXT           "Fonts Set:",IDC_STATIC,7,329,34,8
-    COMBOBOX        IDC_TRACKER_FONT_NUM,76,326,23,56,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "#:",IDC_STATIC,66,328,9,8
-    LTEXT           "Cards:",IDC_STATIC,7,343,22,8
+    GROUPBOX        "Nudge",IDC_STATIC,239,7,91,56,BS_CENTER,WS_EX_TRANSPARENT
+    COMBOBOX        IDC_TRACKER_FONT_SET,56,313,23,56,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_TRACKER_CARD_NUM,92,328,23,53,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Tracker",IDC_STATIC,7,303,108,42
+    LTEXT           "Fonts Set:",IDC_STATIC,16,313,34,8
+    COMBOBOX        IDC_TRACKER_FONT_NUM,92,313,23,56,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "#:",IDC_STATIC,81,313,9,12
+    LTEXT           "Cards:",IDC_STATIC,16,328,22,8
+    GROUPBOX        "Missing",IDC_,7,382,377,50
+    LTEXT           "Cards",IDC_STATIC,15,417,20,8
+    LTEXT           "Static",IDC_MISSING_CARDS,73,417,239,8
+    CONTROL         "",IDC_RIGHT_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,223,30,10,14
+    EDITTEXT        IDC_RIGHT,199,30,26,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Fonts",IDC_STATIC,15,397,19,8
+    LTEXT           "Static",IDC_MISSING_FONTS,73,397,239,8
 END
 
 IDD_EDITDLG DIALOGEX 0, 0, 118, 50
@@ -437,9 +442,11 @@ BEGIN
     IDD_TABLEMAP, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 336
+        RIGHTMARGIN, 384
+        VERTGUIDE, 115
         TOPMARGIN, 7
-        BOTTOMMARGIN, 357
+        BOTTOMMARGIN, 442
+        HORZGUIDE, 363
     END
 
     IDD_EDIT_SYMBOLS, DIALOG
